--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@
                                     <p class="timeline__timeframe">May 2022 - July 2022</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Produced comprehensive FP&A reports, showcasing strong analytical and financial modeling skills. 
-                                        Utilized advanced Excel techniques to streamline financial data, increasing reporting efficiency. 
-                                        Conducted detailed 5-year forecasts covering key financial metrics, providing valuable insights to the finance team. 
-                                        Leveraged Adaptive Planning software to enhance the accuracy and efficiency of financial reporting.</p>
+                                    <p>Produced impactful FP&A reports and detailed 5-year forecasts 
+                                        using advanced Excel techniques and Adaptive Planning software, 
+                                        significantly improving reporting efficiency and providing valuable insights for strategic planning.</p>
                                 </div>
                             </div>
     
