--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
                                     <p class="timeline__timeframe">April 2020 - August 2020</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Collaborated with the COO to enhance operational efficiency, reducing costs and increasing profitability. 
-                                        Organized financial resources into an online investing curriculum, assessed member knowledge through quizzes, and designed databases and forms in WiX to streamline platform processes. 
-                                        Developed a business computing and programming curriculum emphasizing financial applications and practical skills.</p>
+                                    <p>Collaborated with the COO to enhance operational efficiency and profitability 
+                                        by designing databases and forms in WiX. Developed and organized financial and business computing curriculums, assessing member knowledge through quizzes</p>
                                 </div>
                             </div>
     
