--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                                     <p class="timeline__timeframe">May 2024</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Graduated from Carnegie Mellon University with a B.S. in Business Administration, concentrating in Business Analytics and minoring in Logic & Computation. Actively involved in student organizations through leadership roles. 
-                                        Completed coursework in Data Mining for Business Analytics, Advanced Data Management, and End to End Business Analytics.</p>
+                                    <p>Graduated from Carnegie Mellon University with a B.S. in Business Administration, concentrating in Business Analytics and minoring in Logic & Computation.
+                                        Held leadership roles in student organizations and completed coursework in Data Mining for Business Analytics, Advanced Data Management, and End to End Business Analytics.</p>
                                 </div>
                             </div>
     
@@ -223,9 +223,8 @@
                                     <p class="timeline__timeframe">May 2021 - July 2021</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Analyzed the impact of COVID-19 monetary policy on US inflation using linear regression models in R Studio, revealing that money supply significantly affected inflation, while interest rates alone were not impactful. 
-                                        Collected and compiled Federal Reserve data and utilized FRED tools for thorough analysis.
-                                         Documented research processes and presented findings on the interaction between monetary policy variables and inflation, showcasing strong analytical thinking and data analysis skills.</p>
+                                    <p>Revealed significant effects of money supply on US inflation through linear regression analysis in R Studio during COVID-19.
+                                        Utilized FRED tools to collect and compile Federal Reserve data, and documented and presented findings, showcasing advanced analytical and data analysis skills.</p>
                                 </div>
                             </div>
     
