--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                     <p class="timeline__timeframe">May 2024</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Graduated from Carnegie Mellon University with a B.S. in Business Administration, concentrating in Business Analytics and minoring in Logic & Computation.
+                                    <p>Obtained a B.S. in Business Administration, concentrating in Business Analytics and minoring in Logic & Computation.
                                         Held leadership roles in student organizations and completed coursework in Data Mining for Business Analytics, Advanced Data Management, and End to End Business Analytics.</p>
                                 </div>
                             </div>
