--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
                     <div class="s-footer__buttons">
                         <a href="mailto:mauriciovargascolon@gmail.com" class="btn btn--primary u-fullwidth">Say Hello</a>
-                        <a href="VargasMauricioResume.pdf" class="btn btn--stroke u-fullwidth">Get My CV</a>
+                        <a href="VargasMauricioResume.pdf" target= "blank" class="btn btn--stroke u-fullwidth">Get My CV</a>
                     </div>
 
                     </p>
