--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">SQL/QGIS</span>
-                                <a href="https://qgis.org/en/site/forusers/trainingmaterial/index.html" title="Project Link" class="project-link">Project Link</a>
+                                <a href="https://qgis.org/en/site/forusers/trainingmaterial/index.html" target="blank" title="Project Link" class="project-link">Project Link</a>
                             </div>
                             <h4 class="folio-item__title">
                                 SQL/QGIS Project
