--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <h2 class="text-pretitle">Resume</h2>
     
                         <p class="text-huge-title">
-                        Here is my education, work experience, & some skills I've got.
+                        Here is my work experience, education, & some skills I've got.
                         </p>
                     </div>
                 </div>
@@ -569,3 +569,4 @@
 
 </body>
 </html>
+
