--- a/index.html
+++ b/index.html
@@ -130,11 +130,9 @@
                         <h2 class="text-pretitle animate-on-load">About Me</h2>
     
                         <p class="attention-getter animate-on-load">
-                            Hello! I'm Mauricio Vargas, a recent graduate from Carnegie Mellon University with a B.S. in 
-                            Business Administration, concentrating in Business Analytics and a minor in Logic & Computation. 
-                            I am passionate about using data to drive decisions that promote sustainability, address climate change, 
-                            and contribute to a circular, clean, and wasteless economy. 
-                            I have a strong analytical background and a diverse skill set that I am eager to apply in meaningful ways.
+                            Hello! Hello! I'm Mauricio Vargas, a Data Analyst at AIG, where I build Power BI dashboards and Python-driven tools to streamline claims operations, reduce fraud risks, and unlock cost savings—delivering 20-30% efficiency gains.
+                            With a B.S. in Business Analytics from Carnegie Mellon University and hands-on experience in financial modeling (Oriental Bank) and economic research, I bridge data, strategy, and sustainability.
+                            I’m passionate about using Python, SQL, and DAX to turn raw data into decisions—whether optimizing workflows or advancing climate-conscious business practices.
                         </p>
                     </div>
                 </div>
@@ -569,4 +567,5 @@
 
 </body>
 </html>
+
 
