--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <h2 class="text-pretitle animate-on-load">About Me</h2>
     
                         <p class="attention-getter animate-on-load">
-                            Hello! Hello! I'm Mauricio Vargas, a Data Analyst at AIG, where I build Power BI dashboards and Python-driven tools to streamline claims operations, reduce fraud risks, and unlock cost savings—delivering.
+                            Hello! Hello! I'm Mauricio Vargas, a Data Analyst at AIG, where I build Power BI dashboards and Python-driven tools to streamline claims operations, reduce fraud risks, and unlock cost savings.
                             With a B.S. in Business Analytics and a minor in Logic & Computation from Carnegie Mellon University paired with hands-on experience in financial analysis and economic research, I bridge data, strategy, and sustainability.
                             I’m passionate about using Python, SQL, and DAX to turn data into decisions—whether optimizing workflows or advancing climate-conscious business practices.
                         </p>
@@ -567,6 +567,7 @@
 
 </body>
 </html>
+
 
 
 
