--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
                         <ul class="skill-bars">
                             <li>
                             <div class="progress percent60"></div>
-                            <strong>SQL</strong>
+                            <strong>Python</strong>
                             </li>
                             <li>
-                            <div class="progress percent50"></div>
-                            <strong>Tableau</strong>
+                            <div class="progress percent65"></div>
+                            <strong>Power BI</strong>
                             </li>
                             <li>
                             <div class="progress percent55"></div>
@@ -254,11 +254,11 @@
                             </li>
                             <li>
                             <div class="progress percent45"></div>
-                            <strong>Python</strong>
+                            <strong>SQL</strong>
                             </li>
                             <li>
                             <div class="progress percent40"></div>
-                            <strong>Node.JS</strong>
+                            <strong>Tableau</strong>
                             </li>
                             <li>
                             <div class="progress percent40"></div>
@@ -269,8 +269,8 @@
                             <strong>MongoDB</strong>
                             </li>
                             <li>
-                            <div class="progress percent10"></div>
-                            <strong>QGIS</strong>
+                            <div class="progress percent35"></div>
+                            <strong>DAX</strong>
                             </li>
                         </ul>
     
@@ -567,6 +567,7 @@
 
 </body>
 </html>
+
 
 
 
