--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                 <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
-                            <a class="folio-item__thumb-link" href="images\EV.jpg" title="EV Sales Analysis" data-size="1050x700">
-                                <img src="images\EV.jpg" 
-                                     srcset="images\EV.jpgg 1x, images\EV.jpg 2x" alt="">
+                            <a class="folio-item__thumb-link" href="images\evVehicle.jpg" title="EV Sales Analysis" data-size="1050x700">
+                                <img src="evVehicle.jpg" 
+                                     srcset="evVehicle.jpg 1x, evVehicle.jpg 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
@@ -567,6 +567,7 @@
 
 </body>
 </html>
+
 
 
 
